  discovered. (emh, Tim Freeman for noting problem)
- Automatically bump machines working jobs to new job levels when they are
  researched. (emh, Phil for suggestion :)
- Tweak Suspicion and Detection displays for readability. (Phil)
- Move around the various displays on the base screen for parity with the map
  screen. (Phil)

OTHER CHANGES:
- Centralized some of the button code. (emh)
- Tightened up the save/load functions to allow for better save compatibility.
  (emh)
- Add_commas works better with negative numbers. (emh)
- Minor code cleanups. (Phil)
- Convert Evil Tabs in source to (4) spaces.  Code should be easier to read and
  edit now.  (emh)
- Changed savefile signature string to be less release-version based, now that
  the format is churning a lot less. (Phil)

v0.22 (release 2005.10.05):
  [To read about the save file compatibility policy, please see README.txt.]
  NOTE: Save files from versions 0.21 and above should work.  Save files from
  versions 0.20 and before will not work.

- At the start, money gains a minimal amount of interest (as opposed to none).
  (Phil)
- Make the 'change research' button more obvious. (Phil)
- Change the way that technologies/items are stored.  There is now a separate text
  file detailing the technology tree, and another with all of the text
  strings.  This will allow localization of the technologies. (emh)
- When technologies are completed, we can now display a string detailing the
  result. (emh)
- Complete rewrite of technology descriptions, better matching the new names.
  (Phil)
- Minor cleanup of base descriptions. (Phil)
- New default font (Bitstream Vera Sans), especially useful for systems that
  don't have a default Pygame font for some reason (emh; reported by Brian
  Ropers-Huilman)
- Hotkeys for the various speed settings (1-4). (emh)
- Call the 'per day' code for however many days is necessary since the last
  call. (emh)
- Change the grace period for bases to start when construction is complete.